--- a/PluginExample/PluginExample.csproj
+++ b/PluginExample/PluginExample.csproj
@@ -51,11 +51,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Curvy.cs" />
     <Compile Include="CurvyList.xaml.cs">
       <DependentUpon>CurvyList.xaml</DependentUpon>
     </Compile>
     <Compile Include="CurvyPlugin.cs" />
+    <Compile Include="Known_Deck.cs" />
+    <Compile Include="MLModel.cs" />
+    <Compile Include="Predictor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +66,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
